--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,5 +1,7 @@
-.nav {
-  display: flex;
-  width: 100%;
-  height: 4rem;
-}
+
+// #top-nav {
+//   display: flex;
+//   justify-content: space-evenly;
+//   width: 100%;
+//   height: 4rem;
+// }
