sets the create-new-user logic

--- a/src/components/RegisterForm.scss
+++ b/src/components/RegisterForm.scss
@@ -152,8 +152,8 @@
 
   .overlay {
     background: #51ab97;
-    background: -webkit-linear-gradient(to right, #51ab97, #51ab97);
-    background: linear-gradient(to right, #51ab97, #51ab97);
+    background: -webkit-linear-gradient(to right, #347b8e, #51ab97);
+    background: linear-gradient(to right, #347b8e, #51ab97);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
