--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -2,12 +2,14 @@
 @import "bootstrap/scss/bootstrap";
 
 
-.nav {
+#root > div > nav {
   position: relative;
   display: flex;
   flex-wrap: wrap; // allow us to do the line break for collapsing content
   align-items: center;
   justify-content: space-between; // space out brand from logo
   padding: $navbar-padding-y $navbar-padding-x;
-  background: rgba(119, 0, 255, 0.571)
+  background: rgba(119, 0, 255, 0.571);
+  z-index: 2;
+  opacity: 1;
 }
