--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -9,7 +9,11 @@
   align-items: center;
   justify-content: space-between; // space out brand from logo
   padding: $navbar-padding-y $navbar-padding-x;
-  background: rgba(119, 0, 255, 0.571);
+  background: rgb(154, 100, 154);
   z-index: 2;
-  opacity: 1;
+}
+
+.ul {
+  list-style: none;
+  cursor: pointer;
 }
