--- a/src/components/UploadFormHideInput.scss
+++ b/src/components/UploadFormHideInput.scss
@@ -9,3 +9,7 @@ input#outlined-button-file {
   max-width: 10rem;
   // border: 3px solid rgb(138, 68, 138)
 }
+
+// .form-container {
+//   // background-color: rebeccapurple
+// }
