--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -2,7 +2,7 @@
 
 #root {
   font-family: "Montserrat", sans-serif;
-  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+  // background-image: url("https://www.transparenttextures.com/patterns/arches.png");
   
   div > nav {
     position: relative;
