--- a/src/components/SideBar/MyStuvv.scss
+++ b/src/components/SideBar/MyStuvv.scss
@@ -12,7 +12,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image:url(./junk.jpg);
+  background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),
+    url(junk.jpg);
   background-position: 25% 75%;
   width: 100%;
   height: 20rem;
@@ -21,6 +26,6 @@
   font-size: 3rem;
   background-size: 100%;
   background-position: bottom;
-  opacity: .85;
+  // opacity: .70;
   
 }
