--- a/src/components/UploadFormHideInput.scss
+++ b/src/components/UploadFormHideInput.scss
@@ -55,7 +55,12 @@ input#outlined-button-file {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image:url(./build.jpg);
+  background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.3)
+    ),
+    url(build.jpg);
   background-position: 25% 75%;
   width: 100%;
   height: 20rem;
@@ -64,7 +69,7 @@ input#outlined-button-file {
   font-size: 3rem;
   background-size: 100%;
   background-position: bottom;
-  opacity: .85;
+  // opacity: .70;
 }
 
 .MuiButton-outlined {
