re-adds footer to the pages but still missing some style

--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -6,6 +6,7 @@
   .sidebar {
     width: 250px;
     font-family: "Montserrat", sans-serif;
+    font-size: 1.3rem;
     ul {
       a {
         color: #51ab97;
