--- a/src/components/RegisterForm.scss
+++ b/src/components/RegisterForm.scss
@@ -94,6 +94,8 @@
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
+    color: #51ab97;
+    padding: 0;
   }
 
   .sign-in-container {
