--- a/src/components/UploadFormHideInput.scss
+++ b/src/components/UploadFormHideInput.scss
@@ -12,22 +12,20 @@ input#outlined-button-file {
 .img {
   max-width: 10rem;
   margin: 1rem;
-  border: 3px solid #E5A74F
+  border: 3px solid #e5a74f;
 }
 
 .form-container {
-  background-image:url(./build.jpg);
+  background-image: url(./build.jpg);
   // height: 10rem;
   text-align: center;
   padding-top: 2rem;
   color: white;
   background-position: bottom;
-  
 }
 
-
 .form-control {
-  background-color: rgba(189, 44, 44, 0.701)
+  background-color: rgba(189, 44, 44, 0.701);
 }
 
 .submit {
@@ -38,10 +36,8 @@ input#outlined-button-file {
 
 .submit button {
   margin-left: 2rem;
-  background-color: #E5A74F
+  background-color: #e5a74f;
 }
-
-
 
 .MuiButton-label {
   width: 100%;
@@ -55,7 +51,7 @@ input#outlined-button-file {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image:url(./build.jpg);
+  background-image: url(./build.jpg);
   background-position: 25% 75%;
   width: 100%;
   height: 20rem;
@@ -64,11 +60,11 @@ input#outlined-button-file {
   font-size: 3rem;
   background-size: 100%;
   background-position: bottom;
-  opacity: .85;
+  opacity: 0.85;
 }
 
 .MuiButton-outlined {
-  background-color: #E5A74F;
+  background-color: #e5a74f;
   border: 1px solid rgba(0, 0, 0, 0.23);
   padding: 5px 15px;
 }
