--- a/src/components/MyRequests/Myrequests.scss
+++ b/src/components/MyRequests/Myrequests.scss
@@ -7,15 +7,15 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
     ),
-    url(junk.jpg);
-  background-position: 25% 75%;
+    url(requests.jpg);
+  // background-position: 25% 75%;
   width: 100%;
   height: 20rem;
   color: white;
   font-weight: 800;
   font-size: 3rem;
   background-size: 100%;
-  background-position: bottom;
+  background-position: top;
   // opacity: .70;
   
 }
