--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -5,7 +5,7 @@
   // background-image: url("https://www.transparenttextures.com/patterns/arches.png");
   
   div > nav {
-    position: fixed;
+    position: absolute;
     display: flex;
     flex-wrap: wrap; // allow us to do the line break for collapsing content
     align-items: center;
