adds my-requests & tinkered with modals style

--- a/src/components/SavingModal.scss
+++ b/src/components/SavingModal.scss
@@ -8,7 +8,7 @@
   pointer-events: auto;
   background-color: transparent;
   background-clip: padding-box;
-  border-radius: none;
+  border: none;
   outline: none;
   font-weight: 600;
   color: white;
