--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -14,7 +14,7 @@
     justify-content: space-between; // space out brand from logo
     padding: $navbar-padding-y $navbar-padding-x;
     // background: rgba(123, 122, 124, 0.571);
-    // background-color: transparent;
+    // background-color: rgba(255, 255, 255, 0.3);
     z-index: 2;
     width: 100%;
 
