--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -26,7 +26,7 @@
 }
 
 .message-list-body {
-  background-color: burlywood;
+  // background-color: burlywood;
   width: 100%;
   margin: 2rem;
   // display: none;
@@ -47,7 +47,7 @@
 
 .message-list-item {
   background-color: transparent;
-  border: 1px solid purple;
+  border: 1rem solid burlywood;
 }
 
 .message-list li {
@@ -57,4 +57,11 @@
 
 .hidden {
   display: none;
+}
+
+.input-submit {
+  text-align: center;
+  margin: 1rem;
+  // width:100%;
+  // background-color: red;
 }
