--- a/src/components/Request/ListingModal.scss
+++ b/src/components/Request/ListingModal.scss
@@ -2,9 +2,9 @@
   background-color: white;
   font-family: "Montserrat", sans-serif;
   background-image: url("https://www.transparenttextures.com/patterns/arches.png");
-  // color: #215584;
   div.modal-content {
     // background-color: red;
+    margin: 0;
     div.modal-title.h4 {
       font-size: 1.5rem;
       color: #215584;
@@ -17,9 +17,27 @@
       div.request-box {
         // background-color: lightblue;
         font-weight: lighter;
+        // display: flex;
+        // flex-direction: column;
+        // align-self: center;
+
+        div.MuiFormControl-root.MuiTextField-root.MuiFormControl-marginNormal {
+          width: 50%;
+          background-color: white;
+          // margin:auto
+
+          label {
+            padding: 0px;
+          }
+          div.MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl.MuiInputBase-adornedEnd {
+            button {
+              margin: 0;
+            }
+          }
+        }
+
         div.MuiFormControl-root.MuiTextField-root.MuiFormControl-marginNormal {
           width: 70%;
-          padding: 20px;
           background-color: white;
         }
         button {
@@ -27,12 +45,9 @@
           background-color: #215584;
           color: white;
           border-radius: 30px;
+          margin: 40px;
+          padding: 5px;
         }
-      }
-    }
-    div.modal-footer {
-      button {
-        font-size: 1.5rem;
       }
     }
   }
