--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -33,13 +33,19 @@
   align-items: flex-end;
 
   span {
-    border: solid;
+    // border: solid;
+    // box-shadow: 0px 5px;
+    border-color: lightgrey;
+    text-align: center;
+    width: 100%;
     cursor: pointer;
+    background-color: #84aacc;
+    padding: 3px;
   }
 }
 
 .side-bar-body {
-  background-color: blanchedalmond;
+  background-color: #19836b;
   width: 50%;
   height: 100%;
   cursor: pointer;
