sets min-height to most of the routes

--- a/src/components/SideBar/MyStuvv.scss
+++ b/src/components/SideBar/MyStuvv.scss
@@ -1,3 +1,7 @@
+.myStuvv {
+  min-height: 100vh;
+}
+
 .my-stuvv-container {
   display: flex;
   flex-direction: row;
@@ -5,18 +9,14 @@
 }
 
 .my-stuvv-container > div {
-  margin: .5rem;
+  margin: 0.5rem;
 }
 
 .banner {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: 
-    linear-gradient(
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3)
-    ),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url(junk.jpg);
   background-position: 25% 75%;
   width: 100%;
@@ -27,5 +27,4 @@
   background-size: 100%;
   background-position: bottom;
   // opacity: .70;
-  
 }
