--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -4,6 +4,7 @@
 
 #root {
   font-family: "Montserrat", sans-serif;
+  min-height: 100vh;
   // background-image: url("https://www.transparenttextures.com/patterns/arches.png");
 
   div > nav {
