--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -20,6 +20,10 @@
   justify-content: row;
 }
 
+.names-container {
+  width: 50%;
+}
+
 .message-list-body {
   background-color: rgba(255, 255, 255, 0.3);
   // background-color: burlywood;
@@ -45,8 +49,15 @@
   }
 }
 
-.side-bar-body {
+.side-bar-body-inbound {
   background-color: #19836b;
+  width: 50%;
+  // height: 100%;
+  cursor: pointer;
+}
+
+.side-bar-body-outbound {
+  background-color: #84aacc;
   width: 50%;
   // height: 100%;
   cursor: pointer;
