--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -34,32 +34,46 @@
 
 .tab {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  padding: auto;
+}
 
-  span {
-    // border: solid;
-    // box-shadow: 0px 5px;
-    border-color: lightgrey;
-    text-align: center;
-    width: 100%;
-    cursor: pointer;
-    background-color: #84aacc;
-    padding: 3px;
-  }
+.inbound {
+  // border: solid;
+  border-color: lightgrey;
+  text-align: center;
+  width: 100%;
+  height: 3rem;
+  cursor: pointer;
+  background-color: blanchedalmond;
+  // padding: auto;
+}
+
+.outbound {
+  // border: solid;
+  border-color: lightgrey;
+  text-align: center;
+  width: 100%;
+  height: 3rem;
+  cursor: pointer;
+  background-color: #84aacc;
+  // padding: auto;
 }
 
 .side-bar-body-inbound {
-  background-color: #19836b;
+  background-color: blanchedalmond;
   width: 100%;
-  // height: 100%;
+  min-height: 400px;
+  max-height: 500px;
+  overflow: scroll;
   cursor: pointer;
 }
 
 .side-bar-body-outbound {
   background-color: #84aacc;
-  width: 50%;
-  // height: 100%;
+  min-height: 400px;
+  max-height: 500px;
+  overflow: scroll;
   cursor: pointer;
 }
 
@@ -67,6 +81,7 @@
   padding: 0.2rem;
   margin: 0.5rem;
   font-size: 1.4rem;
+  // background-color: rgba(255, 255, 255, 0.3)
 }
 
 .message-list-item {
@@ -109,3 +124,7 @@
     background-color: #51ab97;
   }
 }
+
+// .convo {
+//   background-color: rgba(255, 255, 255, 0.3)
+// }
