styles the cards better and centralizes them

--- a/src/components/CardListItem.scss
+++ b/src/components/CardListItem.scss
@@ -1,4 +1,12 @@
 .card-list-item {
-  width: 300px;
-  // padding: 20px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.MuiCardHeader-root {
+  background-color: #b8d1e7;
+  font-family: "Montserrat", sans-serif;
+}
+
+.carousel-control-next-icon {
+  color: black;
 }
