--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -22,6 +22,7 @@
 
 .names-container {
   width: 50%;
+  margin: 1rem;
 }
 
 .message-list-body {
@@ -45,7 +46,7 @@
   width: 100%;
   height: 3rem;
   cursor: pointer;
-  background-color: blanchedalmond;
+  background-color: burlywood;
   // padding: auto;
 }
 
@@ -61,20 +62,45 @@
 }
 
 .side-bar-body-inbound {
-  background-color: blanchedalmond;
+  background-color: burlywood;
   width: 100%;
   min-height: 400px;
   max-height: 500px;
   overflow: scroll;
   cursor: pointer;
+
+  div {
+    background-color: rgba(255, 255, 255, 0.7);
+    margin: .5rem;
+    border-radius: .3rem;
+    div {
+      margin: 0;
+      border-radius: .3rem .3rem 0 0;
+      padding-left: .5rem;
+
+    }
+  }
+  div:hover {
+    background-color: rgba(255, 255, 255, 1.2);
+    margin: .5rem;
+  }
 }
 
 .side-bar-body-outbound {
   background-color: #84aacc;
   min-height: 400px;
-  max-height: 500px;
+  max-height: 100px;
   overflow: scroll;
   cursor: pointer;
+
+  div {
+    background-color: rgba(255, 255, 255, 0.7);
+    margin: .3rem;
+    border-radius: .3rem;
+  }
+  div:hover {
+    background-color: rgba(255, 255, 255, 1.2);
+  }
 }
 
 .side-bar-user {
@@ -91,10 +117,16 @@
   // border: 3px solid grey;
 }
 
-.message-list li {
+.message-list-inbound li {
   background-color: white;
   list-style-type: none;
   border: 5px solid burlywood;
+}
+
+.message-list-outbound li {
+  background-color: white;
+  list-style-type: none;
+  border: 5px solid #84aacc;
 }
 
 .hidden {
