--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -100,6 +100,12 @@
     background-color: rgba(255, 255, 255, 0.7);
     margin: .3rem;
     border-radius: .3rem;
+
+    div {
+      margin: 0;
+      border-radius: .3rem .3rem 0 0;
+      padding-left: .5rem;
+    }
   }
   div:hover {
     background-color: rgba(255, 255, 255, 1.2);
