--- a/src/components/CarouselOverride.scss
+++ b/src/components/CarouselOverride.scss
@@ -2,7 +2,6 @@
 // override is not happening
 // had to add div. in order to override
 
-
 @import "bootstrap/scss/bootstrap";
 
 // fixes the card getting wider when the description is shown
@@ -29,4 +28,17 @@ div.carousel-inner {
   margin-right: -100%;
   backface-visibility: hidden;
   @include transition($carousel-transition);
+
+  img.d-block.w-100 {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+  }
 }
