adds requestlist using <table> tags

--- a/src/components/MyRequests/Myrequests.scss
+++ b/src/components/MyRequests/Myrequests.scss
@@ -18,3 +18,13 @@
 .requests {
   min-height: 85vh;
 }
+
+.request-list {
+  width: 100vw;
+  list-style-type: none;
+
+ th {
+   text-align: center
+ }
+
+}
