adds user initials on the cards and setTimeout on myStyvv

--- a/src/components/CardListItem.scss
+++ b/src/components/CardListItem.scss
@@ -1,5 +1,9 @@
 .card-list-item {
   font-family: "Montserrat", sans-serif;
+
+  .MuiAvatar-circle {
+    font-size: 0.9rem;
+  }
 }
 
 .MuiCardHeader-root {
