adds a spinner and status when a booking is accepted in the messages body

--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -146,6 +146,13 @@
 .hidden {
   display: none;
 }
+div.message-list {
+  display: flex;
+  justify-content: center;
+  div.custom-height-spinner.spinner-border {
+    margin: auto;
+  }
+}
 
 .search-input {
   display: flex;
