--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -146,12 +146,10 @@
 .hidden {
   display: none;
 }
-div.message-list {
+div.processing {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  div.custom-height-spinner.spinner-border {
-    margin: auto;
-  }
 }
 
 .search-input {
