search refresh added

--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -47,7 +47,7 @@
           }
           .MuiButton-label {
             font-family: "Montserrat", sans-serif;
-            color: rgb(109, 109, 109);
+            color: white;
             padding: 0;
           }
         }
