--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -5,13 +5,29 @@
 }
 form.form-inline.my-2.my-lg-0 {
   input.form-control.mr-sm-2 {
-    width: 550px;
+    width: 500px;
     border-radius: 30px;
     background-color: white;
+    margin: 0 0 0 1rem;
   }
 
   .btn.btn-light.my-2.my-sm-0 {
     border-radius: 30px;
+    background-color: #7ecbba;
+    color: white;
+    border: none;
+    margin-right: .2rem;
   }
 }
 
+.MuiSvgIcon-root {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  font-size: 1.5rem;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  flex-shrink: 0;
+  user-select: none;
+  color: white;
+}
