--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -29,7 +29,7 @@
   background-color: rgba(255, 255, 255, 0.3);
   // background-color: burlywood;
   width: 100%;
-  margin: 2rem;
+  margin: 2rem 5rem 2rem 2rem;
   // display: none;
 }
 
@@ -45,7 +45,8 @@
   width: 100%;
   height: 3rem;
   cursor: pointer;
-  background-color: burlywood;
+  // background-color: burlywood;
+  background-color: rgba(132, 132, 132, 0.466);
   padding: 0.5rem;
   color: white;
   font-size: 1.5rem;
@@ -65,7 +66,8 @@
 }
 
 .side-bar-body-inbound {
-  background-color: burlywood;
+  // background-color: burlywood;
+  background-color: rgba(132, 132, 132, 0.466);
   min-height: 400px;
   max-height: 100px;
   overflow: scroll;
@@ -84,6 +86,10 @@
   }
   div:hover {
     background-color: rgba(255, 255, 255, 1.2);
+  }
+  div.selected-conversation {
+    background-color: rgba(255, 255, 255, 1);
+    width: 100%;
   }
 }
 
@@ -106,7 +112,11 @@
     }
   }
   div:hover {
-    background-color: rgba(255, 255, 255, 1.2);
+    background-color: rgba(255, 255, 255, 1);
+  }
+  div.selected-conversation {
+    background-color: rgba(255, 255, 255, 1);
+    width: 100%;
   }
 }
 
@@ -120,28 +130,64 @@
 .message-list-item {
   // background-color: rgba(255, 255, 255, 0.3);
   // background-color: transparent;
-  margin: 1rem;
+  margin: 1rem 0;
   // border: 3px solid grey;
+}
+.user-message {
+  span {
+    background-color: rgba(132, 170, 204, .7);
+    border-radius: 10px;
+    padding:  5px 10px;
+  }
+  span.my-stuff {
+    background-color: #c5c5c5;
+  }
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: end;
+}
+.non-user-message {
+  // background-color: rgba(255, 255, 255, 0.2); 
+  span {
+    border-radius: 10px;
+    padding:  5px 10px;
+    border: 1px solid black;
+  }
+
+}
+
+.message-list-inbound, .message-list-outbound {
+  padding-left: 0;
 }
 
 .message-list-inbound li {
+  opacity: 1;
+  margin-top: 2rem;
   background-color: white;
   list-style-type: none;
-  border: 5px solid burlywood;
+  // border: 5px solid burlywood;
   overflow: scroll;
   min-height: 430px;
   max-height: 100px;
+  
 }
 
 .message-list-outbound li {
+  opacity: 1;
+  margin-top: 2rem; 
   background-color: white;
   list-style-type: none;
-  border: 5px solid #84aacc;
+  // border: 5px solid #84aacc;
   position: relative;
   overflow: scroll;
   // min-height: 430px;
   // max-height: 100px;
   height: 430px;
+  // .booking-info {
+  //   // font-weight: 900;
+  //   // text-transform: uppercase;
+  //   background-color: rgb(255, 215, 158);
+  // }
 }
 .single-conversation {
   position: relative;
@@ -149,6 +195,7 @@
 }
 .hidden {
   display: none;
+  // opacity: 0;
 }
 div.processing {
   display: flex;
@@ -157,10 +204,12 @@ div.processing {
 }
 
 .search-input {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
+  display: grid;
+  grid-template: 50% 50% / 80% 20%;
   width: 100%;
-  padding:5px;
+  padding:5px 0;
   // margin: 1.5rem;
   //////////////////////////////// change these to fix search bar to bottom of message list...not sure how
   bottom: 0px;
@@ -170,11 +219,14 @@ div.processing {
 }
 
 .input-field {
-  width: 70%;
+  width: 100%;
+
+  grid-area: 2/1/3/2;
 }
 
 .send {
-  width: 30%;
+  grid-area: 2/2/3/3;
+  width: 100% !important;
   outline: none;
   font-family: "Montserrat";
   height: 2rem;
@@ -185,6 +237,15 @@ div.processing {
   &:hover {
     background-color: #51ab97;
   }
+}
+.booking-info {
+  grid-area: 1/1/2/3;
+  width: 100%;
+  text-align: center;
+  margin-bottom: .3rem;
+  // text-transform: uppercase;
+  // font-weight: 900;
+  background-color: rgb(255, 215, 158);
 }
 
 .buttons-message {
