tidied up styles on listing modal

--- a/src/components/CardListItem.scss
+++ b/src/components/CardListItem.scss
@@ -14,3 +14,17 @@
 .carousel-control-next-icon {
   color: black;
 }
+
+.info {
+  background-color: white;
+  padding: 4px;
+}
+
+.MuiTypography-root.MuiTypography-body1.MuiTypography-paragraph {
+  margin-bottom: 2px;
+}
+
+.MuiTypography-root.MuiTypography-body1.MuiTypography-paragraph {
+  // margin-bottom: 2px;
+  background-color: #7ecbba;
+}
