--- a/src/components/Request/ListingModal.scss
+++ b/src/components/Request/ListingModal.scss
@@ -3,8 +3,6 @@
 .listing-modal {
   background-color: white;
   font-family: "Montserrat", sans-serif;
-  // background-image: url("https://www.transparenttextures.com/patterns/arches.png");
-  // background-color: red;
   width: 50% !important;
   height: 50% !important;
   border-radius: 2% !important;
@@ -15,17 +13,6 @@
     height: 100%;
     width: 100%;
     
-    // div.modal-title.h4 {
-    //   font-size: 1.5rem;
-    //   color: #215584;
-    //   font-weight: bold;
-    //   padding: 10px;
-    //   text-align: center;
-    //   padding: 2rem;
-    //   width: 100%;
-    //   height: 100%;
-    //   background-color: #FFD79E;
-    // }
     div.modal-body {
       width: 100%;
       height: 80%;
@@ -37,12 +24,9 @@
 
 
       div.request-box {
-        // background-color: rgba(255, 255, 255, 0.3);
-        // background-color: lightblue;
         font-weight: lighter;
         display: flex;
         flex-direction: column;
-        // padding: 1rem;
         div.MuiFormControl-root.MuiTextField-root.MuiFormControl-marginNormal {
           width: 50%;
           background-color: white;
@@ -65,7 +49,7 @@
         button {
           font-size: 2rem;
           background-color: #215584;
-          color: white;
+          color: white ;
           border-radius: 30px;
           margin: 1rem;
           padding: .5rem;
@@ -73,21 +57,6 @@
       }
     }
   }
-
-
-  // div {
-
-  // border: none;
-  // color: rgb(75, 74, 74);
-
-  // div.MuiFormControl-root.MuiTextField-root.MuiFormControl-marginNormal {
-  //   color: purple;
-
-  //   button {
-  //     border: solid;
-  //   }
-  // }
-  // }
 }
 
 .modal {
@@ -105,15 +74,16 @@
 }
 
 .modal-title {
-  // background-color: #FFD79E;
   width: 100% !important;
   height: 8rem;
   text-align: center;
-  font-size: 2rem;
-  padding: 2rem;
+  font-size: 2rem !important;
+  font-weight: 600 !important;
+  padding-top: 2rem;
   background-image: url("./calendar.jpg");
   background-size: 80%;
   background-position: center;
+  opacity: .9
 }
 
 .popover-body {
@@ -128,8 +98,6 @@
   font-size: 1rem;
   background-color: red;
   border-bottom: 1px solid #ebebeb;
-  // border-top-left-radius: calc(0.3rem - 1px);
-  // border-top-right-radius: calc(0.3rem - 1px);
   z-index: 2;
 }
 
@@ -140,4 +108,13 @@
     background-color: yellow;
   }
 }
+
+.calendar-button >div>div>button>span>svg {
+  color: white;
+}
+
+.listing-modal div.modal-content div.modal-body div.request-box div.MuiFormControl-root.MuiTextField-root.MuiFormControl-marginNormal div.MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl.MuiInputBase-adornedEnd button {
+  margin: 0 .5rem 1rem 0;
+}
+
 
