adds margin to requests page

--- a/src/components/MyRequests/Myrequests.scss
+++ b/src/components/MyRequests/Myrequests.scss
@@ -31,3 +31,15 @@
 .fa-check-circle {
   color: green;
 }
+
+.requests > .makeStyles-root-46 {
+  // margin: 2rem;
+  width: 100%;
+
+  .makeStyles-paper-47 {
+    margin: auto;
+    width: 90%;
+  }
+}
+
+
