fixes width of requests

--- a/src/components/MyRequests/Myrequests.scss
+++ b/src/components/MyRequests/Myrequests.scss
@@ -32,11 +32,9 @@
   color: green;
 }
 
-.requests > .makeStyles-root-46 {
-  // margin: 2rem;
+.requests > .requests-banner + div {
   width: 100%;
-
-  .makeStyles-paper-47 {
+  .MuiPaper-root.MuiPaper-elevation1 {
     margin: auto;
     width: 90%;
   }
