--- a/src/components/Messages/Messages.scss
+++ b/src/components/Messages/Messages.scss
@@ -27,10 +27,8 @@
 
 .message-list-body {
   background-color: rgba(255, 255, 255, 0.3);
-  // background-color: burlywood;
   width: 100%;
   margin: 2rem 5rem 2rem 2rem;
-  // display: none;
 }
 
 .tab {
@@ -45,7 +43,6 @@
   width: 100%;
   height: 3rem;
   cursor: pointer;
-  // background-color: burlywood;
   background-color: rgba(132, 132, 132, 0.466);
   padding: 0.5rem;
   color: white;
@@ -53,7 +50,6 @@
 }
 
 .outbound {
-  // border: solid;
   border-color: lightgrey;
   text-align: center;
   width: 100%;
@@ -65,36 +61,15 @@
   font-size: 1.5rem;
 }
 
-.side-bar-body-inbound {
-  // background-color: burlywood;
-  background-color: rgba(132, 132, 132, 0.466);
-  min-height: 400px;
-  max-height: 100px;
-  overflow: scroll;
-  cursor: pointer;
-
-  div {
-    background-color: rgba(255, 255, 255, 0.7);
-    margin: 0.3rem;
-    border-radius: 0.3rem;
-
-    div {
-      margin: 0;
-      border-radius: 0.3rem 0.3rem 0 0;
-      padding-left: 0.5rem;
-    }
-  }
-  div:hover {
-    background-color: rgba(255, 255, 255, 1.2);
-  }
-  div.selected-conversation {
-    background-color: rgba(255, 255, 255, 1);
-    width: 100%;
-  }
+.side-bar-conversation {
+  transition: all 0.5s;
 }
+//////////////////////////
+//NEW CLASS ORGINIZATION//
 
-.side-bar-body-outbound {
+.side-bar-body {
   background-color: #84aacc;
+
   min-height: 400px;
   max-height: 100px;
   overflow: scroll;
@@ -116,22 +91,30 @@
   }
   div.selected-conversation {
     background-color: rgba(255, 255, 255, 1);
-    width: 100%;
+    transition: all 0.5s;
+    margin-right: 0;
+    border-radius: 0.3rem 0 0 0.3rem;
   }
 }
+
+div.side-bar-inbound {
+  background-color: rgba(132, 132, 132, 0.466);
+}
+div.side-bar-outbound {
+  background-color: #84aacc;
+}
+
+//END NEW ORGINIZATION//
+////////////////////////
 
 .side-bar-user {
   padding: 0.2rem;
   margin: 0.5rem;
   font-size: 1.4rem;
-  // background-color: rgba(255, 255, 255, 0.3)
 }
 
 .message-list-item {
-  // background-color: rgba(255, 255, 255, 0.3);
-  // background-color: transparent;
   margin: 1rem 0;
-  // border: 3px solid grey;
 }
 .user-message {
   span {
